--- a/recipe-pages/recipes.css
+++ b/recipe-pages/recipes.css
@@ -165,6 +165,26 @@ footer {
     color: rgb(54, 28, 0);
 }
 
+/* About page Style */
+
+figure {
+    width: 100%;
+    padding: 24px;
+    text-align: center;
+}
+figcaption {
+    margin-top: 8px;
+}
+figure img{
+    border-radius: 16px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.4);
+    /* margin: 20px; */
+}
+/* .before-after {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+} */
+
 @media (max-width: 480px) {
     main {
         padding: 32px;
