--- a/recipes.css
+++ b/recipes.css
@@ -97,7 +97,7 @@ main {
     }
 }
 
-.recipe-image {
+.recipe-image-container {
     width: 100%;
     height: 100%;
     aspect-ratio: 9 / 4;
@@ -105,7 +105,7 @@ main {
     position: relative;
 }
 
-.recipe-image img {
+.recipe-image-container img {
     border-radius: 10px;
     object-fit: cover;
     object-position: center;
@@ -200,12 +200,12 @@ figure img{
         font-size: 1.30rem;
     }
 
-    .recipe-image {
+    .recipe-image-container {
         width: 98vw;
         margin: -40px -40px 0 -40px;
     }
 
-    .recipe-image img {
+    .recipe-image-container img {
         border-radius: 0px;
     }
     footer {
