fix: fixed error occured at navbar during merging of remote and local data

--- a/recipes.css
+++ b/recipes.css
@@ -203,7 +203,7 @@ nav ul {
     font-size: 18px;
     width: 100%;
     display: flex;
-    /* gap: 40px; */
+    gap: 40px;
     justify-items: center;
     text-decoration: none;
     list-style: none;
