--- a/recipes.css
+++ b/recipes.css
@@ -210,16 +210,15 @@ nav ul {
     font-weight: 500;
     padding: 24px 72px 0px;
 
-} nav span {
+}
+
+nav span {
     font-weight: 500;
 }
 
 nav a {
     text-decoration: none;
-    font-style: normal;
-    color: rgb(117, 75, 31);
-    font-style: normal;
-    color: rgb(64, 43, 17);
+    color: rgb(70, 45, 19);
 }
 
 nav a:hover {
